<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/full_bg_gra"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/full_bg_gra"
        android:orientation="vertical" >

        <TableRow
            android:id="@id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@id/imageView1"
                android:layout_width="100.0dip"
                android:layout_height="100.0dip"
                android:src="@drawable/logo_main" />

            <TableRow
                android:id="@id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@id/TxtphotomenuHK"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40.0dip"
                    android:gravity="left|center"
                    android:text="@string/photomenu"
                    android:textColor="#ffffff"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textSize="25.0dip"
                    android:textStyle="bold|italic" />
            </TableRow>
        </TableRow>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <TableRow
                android:id="@id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@id/btnHKPhoto1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"
                    android:text="@string/hkp1" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip" >

                <Button
                    android:id="@id/btnHKPhoto2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"
                    android:text="@string/hkp2" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip" >

                <Button
                    android:id="@id/btnHKPhoto3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"
                    android:text="@string/hkp3" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip" >

                <Button
                    android:id="@id/btnHKPhoto4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"
                    android:text="@string/hkp4" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip" >

                <Button
                    android:id="@id/btnHKPhoto5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"
                    android:text="@string/hkp5" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip" >

                <Button
                    android:id="@id/btnHKPhoto6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"
                    android:text="@string/hkp6" />
            </TableRow>

            <TableRow
                android:id="@id/tableRow7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip" >

                <Button
                    android:id="@id/btnHKPhoto7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"
                    android:text="@string/hkp7" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@id/tableRow8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center" >

                <Button
                    android:id="@id/btnhkback"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textColor="#ffffff"
                    android:background="@drawable/button_selector"
                    android:text="@string/back" />

                <TextView
                    android:id="@id/btnphotohindi"
                    android:layout_width="120.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20.0dip"
                    android:text="       हिंदी"
                    android:textSize="22.0dip" />

                <Button
                    android:id="@id/btnhknext"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:textColor="#ffffff"
                    android:layout_marginLeft="20.0dip"
                    android:background="@drawable/button_selector"
                    android:text="@string/next" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</ScrollView>